# Edsger

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CLEAN_BUILD_README.md  CONTRIBUTING.md  CONTRIBUTING.rst  INSTALL_MINGW_WINDOWS.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  WINDOWS_OPTIMIZATION.md  api.html  clean_build.sh  clean_build_linux.sh  clean_build_windows.bat  clean_build_windows.ps1  contributing.html  force_gcc_build.bat  force_gcc_build_safe.bat  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  pyrightconfig.json  quickstart.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  source_dist.yml  tests.yml  wheels.yml
_sources/: api.md.txt  contributing.md.txt  index.md.txt  installation.md.txt  quickstart.md.txt
docs/: TYPING.md  conf.py  index.rst  requirements.txt
docs/source/: api.md  conf.py  edsger.rst  index.md  index.rst  installation.md  installation.rst  introduction.rst  quickstart.md
docs_old/source/: conf.py  edsger.rst  index.rst  introduction.rst
scripts/: README_benchmark_os.md  bellman_ford_dimacs.py  benchmark.py  benchmark_comparison.py  benchmark_comparison_os.py  benchmark_dimacs_USA_linux.json  benchmark_dimacs_USA_windows.json  compare_bellman_ford_scipy.py  compare_dijkstra_scipy.py  dijkstra_dimacs.py  plot_benchmark_comparison.py  requirements.txt  requirements_linux.txt  requirements_windows.txt
src/edsger/: __init__.py  _version.py  bellman_ford.pyi  bellman_ford.pyx  bfs.pyi  bfs.pyx  commons.pxd  commons.pyi  commons.pyx  dijkstra.pyi  dijkstra.pyx  dijkstra_nodec.pyx  graph_importer.py  memory_alloc.h  networks.py  path.py  path_tracking.pyi  path_tracking.pyx  pq_4ary_dec_0b.pxd  pq_4ary_dec_0b.pyx  pq_4ary_nodec_0b.pxd  pq_4ary_nodec_0b.pyx  pq_bin_dec_0b.pxd  pq_bin_dec_0b.pyx  pqueue_imp_bin_dec_0b.pyx  pqueue_imp_bin_dec_1b.pyx  prefetch_compat.h  skeleton.py  spiess_florian.pxd  spiess_florian.pyi  spiess_florian.pyx  star.pyi  star.pyx  utils.py  win_memory.h
tests/: conftest.py  test_arrow_backend.py  test_backend_selection.py  test_bellman_ford.py  test_bfs.py  test_dataframe_integration.py  test_dijkstra.py  test_graph_importer.py  test_path.py  test_path_tracking.py  test_polars_support.py  test_pq_4ary_dec_0b.py  test_pq_bin_dec_0b.py  test_skeleton.py  test_spiess_florian.py
