[build-system]
requires = ["setuptools>=45.0", "setuptools_scm[toml]>=6.3.1", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "edsger"
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
write_to = "src/edsger/_version.py"
write_to_template = '__version__ = "{version}"'

[tool.pytest.ini_options]
testpaths = [
    "tests"
]