[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.3.1", "wheel", "Cython>=3", "numpy>=1.26"]
build-backend = "setuptools.build_meta"

[project]
name = "edsger"
dynamic = ["version"]
description = "Graph algorithms in Cython."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [
    { name = "François Pacull", email = "francois.pacull@architecture-performance.fr" },
]
maintainers = [
    { name = "François Pacull", email = "francois.pacull@architecture-performance.fr" },
]
keywords = ["python", "graph", "shortest path", "Dijkstra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
dependencies = [
  "setuptools",
  "setuptools_scm",
  "numpy>=1.26",
  "Cython>=3",
  "pandas",
]

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "black"
]
# Test dependencies. 
# pip install .'[test]' on Linux
test = [
    "pytest",
    "scipy<1.11"
]
# Doc dependencies.
doc = [
    "sphinx",
    "sphinx_design",
    "sphinx_rtd_theme"
]

[project.urls]
Repository = "https://github.com/aetperf/Edsger"
Documentation = "https://edsger.readthedocs.io"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
write_to = "src/edsger/_version.py"
write_to_template = '__version__ = "{version}"'

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.cibuildwheel]
# Skip 32-bit i686 architectures (outdated, rarely needed)
skip = "*_i686"