[metadata]
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/aetperf/edsger/
platforms = any

[options]
packages = find_namespace:
python_requires = >=3.7, < 3.11
package_dir =
    =src
zip_safe = False
include_package_data = True

[options.extras_require]
testing =
    pytest
    codecov
    pytest-cov

[options.packages.find]
where = src
exclude =
    tests
