[metadata]
url = https://github.com/aetperf/edsger/
author = Francois Pacull
author_email = "Francois Pacull" francois.pacull@architecture-performance.fr
description = Graph algorithms in Python
long_description = file: README.rst
platforms = any
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
python_requires = >=3.7, < 3.11
package_dir =
    =src
zip_safe = False
include_package_data = True

[options.extras_require]
testing =
    pytest
    codecov
    pytest-cov

[options.packages.find]
where = src
exclude =
    tests
